[package]
name = "maud-lsp"
version = "0.1.0"
edition = "2021"
description = "A language server for Maud"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carrascomj/maud-lsp"
readme = "README.md"

[dependencies]
argh = "0.1.9"
lsp-server = "0.6.0"
lsp-types = "0.93.2"
ouroboros = "0.15.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
toml = "0.5.9"

[dev-dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
jod-thread = "0.1.2"

